--- a/http2_node_test/push_stream/index.html
+++ b/http2_node_test/push_stream/index.html
@@ -17,14 +17,6 @@
 
 <body>
     <h1>Hello HTTP/2 World!</h1>
-    <img src="/images/tim-berners-lee-2.jpg" alt="Tim Berners Lee" />
-    <img src="/images/tim-berners-lee-3.jpg" alt="Tim Berners Lee" />
-    <img src="/images/tim-berners-lee-4.jpg" alt="Tim Berners Lee" />
-    <img src="/images/tim-berners-lee-5.jpg" alt="Tim Berners Lee" />
-    <img src="/images/tim-berners-lee-6.jpg" alt="Tim Berners Lee" />
-    <img src="/images/tim-berners-lee-7.jpg" alt="Tim Berners Lee" />
-    <img src="/images/tim-berners-lee-8.jpg" alt="Tim Berners Lee" />
-    <img src="/images/tim-berners-lee-9.jpg" alt="Tim Berners Lee" />
-    <img src="/images/tim-berners-lee-10.jpg" alt="Tim Berners Lee" />
+    <img src="/images/San.jpg" alt="принцесса мононоке" />
 </body>
 </html>
